--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -22,6 +22,13 @@
         },
         "Transforms": [ { "PathPattern": "{**catch-all}" } ]
       },
+      "user-route": {
+        "ClusterId": "user-cluster",
+        "Match": {
+          "Path": "/user-service/{**catch-all}"
+        },
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+      },
       "ordering-route": {
         "ClusterId": "ordering-cluster",
         "RateLimiterPolicy": "fixed",
@@ -43,6 +50,13 @@
         "Destinations": {
           "destination1": {
             "Address": "http://basket.api:8080"
+          }
+        }
+      },
+      "user-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://user.api:8080"
           }
         }
       },
