--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,6 +7,9 @@ services:
   basketdb:
     image: postgres
 
+  userdb:
+    image: postgres
+    
   distributedcache:
     image: redis
 
@@ -27,6 +30,12 @@ services:
     build:
       context: .
       dockerfile: Services/Basket/Basket.API/Dockerfile
+
+  user.api:
+    image: ${DOCKER_REGISTRY-}userapi
+    build:
+      context: .
+      dockerfile: Services/User/User.API/Dockerfile
 
   discount.grpc:
     image: ${DOCKER_REGISTRY-}discountgrpc
@@ -55,6 +64,7 @@ services:
 volumes:
   postgres_catalog:
   postgres_basket:
+  postgres_user:
 
 
 
