--- a/src/launchSettings.json
+++ b/src/launchSettings.json
@@ -4,6 +4,7 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
+        "user.api": "StartDebugging",
         "catalog.api": "StartDebugging",
         "basket.api": "StartDebugging",
         "discount.grpc": "StartDebugging",
