Add authorize and Category

--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Database": "Server=localhost;Port=5432;Database=CatalogDb;User Id=postgres;Password=root;Include Error Detail=true"
   },
+  "Jwt": {
+    "Audience": "http://catalog.api:8080"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
