add Review Service

--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -29,6 +29,13 @@
         },
         "Transforms": [ { "PathPattern": "{**catch-all}" } ]
       },
+      "review-route": {
+        "ClusterId": "review-cluster",
+        "Match": {
+          "Path": "/review-service/{**catch-all}"
+        },
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+      },
       "ordering-route": {
         "ClusterId": "ordering-cluster",
         "RateLimiterPolicy": "fixed",
@@ -57,6 +64,13 @@
         "Destinations": {
           "destination1": {
             "Address": "http://user.api:8080"
+          }
+        }
+      },
+      "review-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://review.api:8080"
           }
         }
       },
