--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -9,7 +9,10 @@ services:
     
   userdb:
     image: postgres
-    
+  
+  reviewdb:
+    image: postgres
+
   distributedcache:
     image: redis
 
@@ -36,6 +39,12 @@ services:
     build:
       context: .
       dockerfile: Services/Basket/Basket.API/Dockerfile
+
+  review.api:
+    image: ${DOCKER_REGISTRY-}reviewapi
+    build:
+      context: .
+      dockerfile: Services/Review/Review.API/Dockerfile
 
   discount.grpc:
     image: ${DOCKER_REGISTRY-}discountgrpc
@@ -65,3 +74,4 @@ volumes:
   postgres_catalog:
   postgres_basket:
   postgres_user:
+  postgres_review:  
