--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -36,6 +36,13 @@
         },
         "Transforms": [ { "PathPattern": "{**catch-all}" } ]
       },
+      "file-route": {
+        "ClusterId": "file-cluster",
+        "Match": {
+          "Path": "/file-service/{**catch-all}"
+        },
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+      },
       "ordering-route": {
         "ClusterId": "ordering-cluster",
         "RateLimiterPolicy": "fixed",
@@ -74,6 +81,14 @@
           }
         }
       },
+      "file-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://file.api:8080"
+          }
+        }
+      },
+
       "ordering-cluster": {
         "Destinations": {
           "destination1": {
