--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -7,6 +7,8 @@
     "Issuer": "Quanggiap299",
     "Audience": "PhamQuangGiapA41056"
   },
+  "CATALOG_API_URL": "https://localhost:6069",
+  "ORDER_API_URL": "http://localhost:6003",
   "MessageBroker": {
     "Host": "amqp://localhost:5672",
     "UserName": "guest",
