Can generate payment url now

--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -17,6 +17,16 @@
   "FeatureManagement": {
     "OrderFullfilment": false
   },
+  "BillingSetting": {
+    "VnpaySetting": {
+      "VnpTmnCode": "UICMIOWF",
+      "VnpHashSecret": "AISHIA1VAAM2KLQ4XKUL1P76Z3K2VT5F",
+      "VnpUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+      "VnpReturnUrl": "http://localhost:3000/confirm-payment",
+      "Querydr": "https://sandbox.vnpayment.vn/merchantv2/",
+      "VnExpiredMinute": 15
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
