--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -206,7 +206,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
-      - ConnectionStrings__Database=Server=orderdb;Database=OrderDb;User Id=sa;Password=Quanggiap299@;Encrypt=False;TrustServerCertificate=True
+      - ConnectionStrings__Database=Server=host.docker.internal,1433;Database=OrderDb;User Id=sa;Password=Quanggiap299@;Encrypt=False;TrustServerCertificate=True
       - MessageBroker__Host=amqp://ecommerce-mq:5672
       - MessageBroker__UserName=guest
       - MessageBroker__Password=guest
