Add Notification Service

--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -50,6 +50,14 @@
           "Path": "/ordering-service/{**catch-all}"
         },
         "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+      },
+      "notification-route": {
+        "ClusterId": "notification-cluster",
+        "RateLimiterPolicy": "fixed",
+        "Match": {
+          "Path": "/notification-service/{**catch-all}"
+        },
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
       }
     },
     "Clusters": {
@@ -88,11 +96,17 @@
           }
         }
       },
-
       "ordering-cluster": {
         "Destinations": {
           "destination1": {
             "Address": "http://ordering.api:8080"
+          }
+        }
+      },
+      "notification-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://notification.api:8080"
           }
         }
       }
