--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -67,6 +67,12 @@ services:
       context: .
       dockerfile: Services/Ordering/Ordering.API/Dockerfile
 
+  notification.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+        context: .
+        dockerfile: Services/Notification/Notification.API/Dockerfile
+
   yarpapigateway:
     image: ${DOCKER_REGISTRY-}yarpapigateway
     build:
