--- a/src/Services/User/User.API/appsettings.json
+++ b/src/Services/User/User.API/appsettings.json
@@ -13,5 +13,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "EmailProviderType": "smtp",
+    "SMTPEmailSetting": {
+      "DisplayName": "ShoppingOnline",
+      "EnableVerification": false,
+      "From": "giappham345@gmail.com",
+      "SMTPServer": "smtp.gmail.com",
+      "UseSsl": true,
+      "Port": 587,
+      "Username": "giappham345@gmail.com",
+      "Password": "weqgmidzkuatikzr"
+    }
+  }
 }
