--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -21,7 +21,7 @@ jobs:
         service:
           - name: be-user-api-task-service
             ecr_repo: user-api
-            ecs_service: user-api-service
+            ecs_service: be-user-api-task-service
             task_def: .github/ecs/user-api-task-def.json
             container_name: user-api-container
             docker_context: ./Services/User
@@ -29,7 +29,7 @@ jobs:
 
           - name: be-catalog-api-task-service
             ecr_repo: catalog-api
-            ecs_service: catalog-api-service
+            ecs_service: be-catalog-api-task-service
             task_def: .github/ecs/catalog-api-task-def.json
             container_name: catalog-api-container
             docker_context: ./Services/Catalog
@@ -37,7 +37,7 @@ jobs:
 
           - name: be-basket-api-task-service
             ecr_repo: basket-api
-            ecs_service: basket-api-service
+            ecs_service: be-basket-api-task-service
             task_def: .github/ecs/basket-api-task-def.json
             container_name: basket-api-container
             docker_context: ./Services/Basket
@@ -45,7 +45,7 @@ jobs:
 
           - name: be-review-api-task-service
             ecr_repo: review-api
-            ecs_service: review-api-service
+            ecs_service: be-review-api-task-service
             task_def: .github/ecs/review-api-task-def.json
             container_name: review-api-container
             docker_context: ./Services/Review
@@ -53,7 +53,7 @@ jobs:
 
           - name: be-file-api-task-service
             ecr_repo: file-api
-            ecs_service: file-api-service
+            ecs_service: be-file-api-task-service
             task_def: .github/ecs/file-api-task-def.json
             container_name: file-api-container
             docker_context: ./Services/Media
@@ -61,7 +61,7 @@ jobs:
 
           - name: be-order-api-task-service
             ecr_repo: order-api
-            ecs_service: order-api-service
+            ecs_service: be-order-api-task-service
             task_def: .github/ecs/order-api-task-def.json
             container_name: order-api-container
             docker_context: ./Services/Ordering
@@ -69,23 +69,23 @@ jobs:
 
           - name: be-notification-api-task-service
             ecr_repo: notification-api
-            ecs_service: notification-api-service
+            ecs_service: be-notification-api-task-service
             task_def: .github/ecs/notification-api-task-def.json
             container_name: notification-api-container
             docker_context: ./Services/Notification
             dockerfile: Notification.API/Dockerfile
 
           - name: be-discount-api-task-service
-            ecr_repo: discount-grpc
-            ecs_service: discount-grpc-service
+            ecr_repo: discount-api
+            ecs_service: be-discount-api-task-service
             task_def: .github/ecs/discount-grpc-task-def.json
-            container_name: discount-grpc-container
+            container_name: discount-api-container
             docker_context: ./Services/Discount/Discount.Grpc
             dockerfile: Dockerfile
 
           - name: be-yarp-apigateway-task-service
-            ecr_repo: yarpapigateway
-            ecs_service: yarpapigateway-service
+            ecr_repo: yarpapigateway-api
+            ecs_service: be-yarp-apigateway-task-service
             task_def: .github/ecs/yarpapigateway-task-def.json
             container_name: yarpapigateway-container
             docker_context: ./ApiGateways/YarpApiGateway
