Update connection string

--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5432;Database=BasketDb;User Id=postgres;Password=root;Include Error Detail=true",
+    "Database": "Host=ep-withered-mode-abvpn191-pooler.eu-west-2.aws.neon.tech;Database=BasketDb;Username=neondb_owner;Password=npg_iI0VlNtHxs7F;SslMode=Require",
     "Redis": "localhost:6379"
   },
   "GrpcSettings": {
