--- a/src/Services/Review/Review.API/appsettings.json
+++ b/src/Services/Review/Review.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5432;Database=ReviewDb;User Id=postgres;Password=root;Include Error Detail=true"
+    "Database": "Host=ep-withered-mode-abvpn191-pooler.eu-west-2.aws.neon.tech;Database=ReviewDb;Username=neondb_owner;Password=npg_iI0VlNtHxs7F;SslMode=Require"
   },
   "MessageBroker": {
     "Host": "amqp://localhost:5672",
