--- a/src/Services/Media/Media.API/appsettings.json
+++ b/src/Services/Media/Media.API/appsettings.json
@@ -20,6 +20,6 @@
     "Endpoint": "https://669706fc709d9a85a432efecf3abed73.r2.cloudflarestorage.com"
   },
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5432;Database=FileDb;User Id=postgres;Password=root;Include Error Detail=true"
+    "Database": "Host=ep-withered-mode-abvpn191-pooler.eu-west-2.aws.neon.tech;Database=FileDb;Username=neondb_owner;Password=npg_iI0VlNtHxs7F;SslMode=Require"
   }
 }
