--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3.4'
 
 services:
-  catalogdb:
-    image: postgres
+  # catalogdb:
+  #   image: postgres
 
-  basketdb:
-    image: postgres
+  # basketdb:
+  #   image: postgres
     
-  userdb:
-    image: postgres
+  # userdb:
+  #   image: postgres
   
-  reviewdb:
-    image: postgres
+  # reviewdb:
+  #   image: postgres
 
-  filedb:
-    image: postgres
+  # filedb:
+  #   image: postgres
 
   distributedcache:
     image: redis
@@ -85,9 +85,9 @@ services:
       context: .
       dockerfile: WebApps/Shopping.Web/Dockerfile
 
-volumes:
-  postgres_catalog:
-  postgres_basket:
-  postgres_user:
-  postgres_review:
-  postgres_file:
+# volumes:
+#   postgres_catalog:
+#   postgres_basket:
+#   postgres_user:
+#   postgres_review:
+#   postgres_file:
