--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=ep-withered-mode-abvpn191-pooler.eu-west-2.aws.neon.tech;Database=BasketDb;Username=neondb_owner;Password=npg_iI0VlNtHxs7F;SslMode=Require",
+    "Database": "Host=ep-summer-wave-a4okjsea-pooler.us-east-1.aws.neon.tech;Database=BasketDb;Username=neondb_owner;Password=npg_fXcpTMYN1ky8;SslMode=Require",
     "Redis": "localhost:6379"
   },
   "GrpcSettings": {
