--- a/src/Services/Notification/Notification.API/appsettings.json
+++ b/src/Services/Notification/Notification.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=ep-summer-wave-a4okjsea-pooler.us-east-1.aws.neon.tech;Database=NotificationDb;Username=neondb_owner;Password=npg_fXcpTMYN1ky8;SslMode=Require"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
