--- a/src/Services/Review/Review.API/appsettings.json
+++ b/src/Services/Review/Review.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=ep-withered-mode-abvpn191-pooler.eu-west-2.aws.neon.tech;Database=ReviewDb;Username=neondb_owner;Password=npg_iI0VlNtHxs7F;SslMode=Require"
+    "Database": "Host=ep-snowy-credit-a4ogtygi-pooler.us-east-1.aws.neon.tech;Database=ReviewDb;Username=neondb_owner;Password=npg_DyTZ8Qq9IiOx;SslMode=Require"
   },
   "MessageBroker": {
     "Host": "amqp://localhost:5672",
