--- a/src/Services/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/Services/Catalog/Catalog.API/Catalog.API.csproj
@@ -16,7 +16,8 @@
     <PackageReference Include="Carter" Version="8.0.0" />    
     <PackageReference Include="Marten" Version="6.4.1" />    
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />    
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />    
+    <PackageReference Include="NEST" Version="7.17.4" />
   </ItemGroup>
 
   <ItemGroup>
