--- a/src/Services/User/User.API/User.API.csproj
+++ b/src/Services/User/User.API/User.API.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Carter" Version="8.0.0" />
     <PackageReference Include="MailKit" Version="4.12.1" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Marten" Version="7.38.1" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
